all tasks is done

--- a/src/i18n/translations/en.json
+++ b/src/i18n/translations/en.json
@@ -14,11 +14,31 @@
     "other": "articles"
   },
   "article.add": "Add",
+  "article.country": "Manufacturer country",
+  "article.category": "Category",
+  "article.date": "Year of issue",
+  "article.price": "Price",
+  "filter.categories.all": "All",
+  "filter.categories.order": "In order",
+  "filter.categories.title": "By naming",
+  "filter.categories.price": "High price first",
+  "filter.categories.edition": "Ancients",
+  "filter.search": "Search",
   "filter.reset": "Reset",
   "auth.title": "Sign In",
   "auth.login": "Login",
   "auth.password": "Password",
   "auth.signIn": "Sign in",
   "session.signIn": "Sign In",
-  "session.signOut": "Sign Out"
+  "session.signOut": "Sign Out",
+  "comment.title": "Comments",
+  "comment.newComment.title": "New comment",
+  "comment.newComment.reply": "New reply",
+  "comment.signIn": "Sign In",
+  "comment.signinDescr": "to be able to",
+  "comment.signinReply": "reply.",
+  "comment.signinComment": "comment.",
+  "comment.send": "Send",
+  "comment.cansel": "Cansel",
+  "comment.answer": "Reply"
 }
