--- a/src/i18n/translations/ru.json
+++ b/src/i18n/translations/ru.json
@@ -16,11 +16,31 @@
     "other": "товара"
   },
   "article.add": "Добавить",
+  "article.country": "Страна производитель",
+  "article.category": "Категория",
+  "article.date": "Год выпуска",
+  "article.price": "Цена",
+  "filter.categories.all": "Все",
+  "filter.categories.order": "По порядку",
+  "filter.categories.title": "По именованию",
+  "filter.categories.price": "Сначала дорогие",
+  "filter.categories.edition": "Древние",
+  "filter.search": "Поиск",
   "filter.reset": "Сбросить",
   "auth.title": "Вход",
   "auth.login": "Логин",
   "auth.password": "Пароль",
   "auth.signIn": "Войти",
   "session.signIn": "Вход",
-  "session.signOut": "Выход"
+  "session.signOut": "Выход",
+  "comment.title": "Комментарии",
+  "comment.newComment.title": "Новый комментарий",
+  "comment.newComment.reply": "Новый ответ",
+  "comment.signIn": "Войдите",
+  "comment.signinDescr": "чтобы иметь возможность",
+  "comment.signinReply": "ответить.",
+  "comment.signinComment": "комментировать.",
+  "comment.send": "Отправить",
+  "comment.cansel": "Отмена",
+  "comment.answer": "Ответить"
 }
